...
    >
      <Tab.Screen
        name="HomeTab"
        component={HomeStack}
        options={{
          tabBarLabel: 'Início',
          tabBarButtonTestID: 'tab-inicio',
          tabBarIcon: ({ color, focused }) => (
            <TabIcon icon={Home} color={color} focused={focused} />
          ),
        }}
      />
      <Tab.Screen
...
      />
      <Tab.Screen
        name="PedidosTab"
        component={PedidosScreen}
        options={{
          tabBarLabel: 'Pedidos',
          tabBarButtonTestID: 'tab-pedidos',
          tabBarIcon: ({ color, focused }) => (
            <PedidosTabIcon color={color} focused={focused} />
          ),
        }}
      />
      <Tab.Screen
...
